--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-altair
-pandas
-streamlit
-pdfplumber
-plotly
-datetime
-locale
+pdfplumber==0.5.28
+pandas==1.3.3
+numpy==1.21.2
+matplotlib==3.4.3
+seaborn==0.11.2
+streamlit==1.15.0
+plotly==5.3.1
